[package]
authors = ["Trevor Pierce <yeahtrevorpierce@gmail.com>"]
edition = "2018"
name = "time_clock"
version = "0.1.0"

[dependencies]
async-std = {version = "1.6", features = ["attributes"]}
diesel = {version = "1.4.5", features = ["postgres"]}
dotenv = "0.15.0"
serde = "1.0.123"
serde_json = "1.0"
sqlx = {version = "0.5.1", features = ["postgres", "runtime-async-std-native-tls"]}
structopt = "0.3.15"
