[package]
authors = ["Trevor Pierce <yeahtrevorpierce@gmail.com>"]
edition = "2018"
name = "time_clock"
version = "0.1.0"

[dependencies]
async-std = {version = "1.6", features = ["attributes"]}
clap = {version = "2.33.3", features = ["yaml"]}
diesel = {version = "1.4.5", features = ["postgres"]}
dotenv = "0.15.0"
sqlx = {version = "0.5.1", features = ["postgres", "runtime-async-std-native-tls"]}
structopt = "0.3.15"
